update env file

--- a/synthea/etl/.env
+++ b/synthea/etl/.env
@@ -1,4 +1,4 @@
-# Path to the directory containing the downloaded SynPUF files
+# Path to the directory containing the downloaded Synthea files
 BASE_SYNTHEA_INPUT_DIRECTORY=/workspaces/practice/synthea/data/BASE_SYNTHEA_INPUT_DIRECTORY
 # Path to the directory containing the OMOP Vocabulary v5 files (can be downloaded from http://www.ohdsi.org/web/athena/)
 BASE_OMOP_INPUT_DIRECTORY=/workspaces/practice/synpuf/data/BASE_OMOP_INPUT_DIRECTORY
