--- a/synthea/etl/.env
+++ b/synthea/etl/.env
@@ -1,13 +1,13 @@
 # Path to the directory containing the downloaded Synthea files
-BASE_SYNTHEA_INPUT_DIRECTORY=/workspaces/practice/synthea/data/BASE_SYNTHEA_INPUT_DIRECTORY
+BASE_SYNTHEA_INPUT_DIRECTORY=/workspaces/practice/synthea/data/BASE_SYNTHEA_INPUT_DIRECTORY/output_1
 # Path to the directory containing the OMOP Vocabulary v5 files (can be downloaded from http://www.ohdsi.org/web/athena/)
 BASE_OMOP_INPUT_DIRECTORY=/workspaces/practice/synpuf/data/BASE_OMOP_INPUT_DIRECTORY
 # Path to the directory where CDM-compatible CSV files should be saved
-BASE_OUTPUT_DIRECTORY=/workspaces/practice/synthea/data/BASE_OMOP_INPUT_DIRECTORY
+BASE_OUTPUT_DIRECTORY=/workspaces/practice/synthea/data/BASE_OUTPUT_DIRECTORY
 # Base number to start the condition ID counter
 CONDITION_ID_BASE=10000
 # Input chunk size for reading the csv if you have limited memory
-INPUT_CHUNK_SIZE=5000000
+INPUT_CHUNK_SIZE=500000
 # cdm version
 CDM_VERSION=5
 # counter file name
